# ica-analysis-dallasai

./: .gitignore  1-data_prep.ipynb  2-ica_analysis.ipynb  README.md  pyproject.toml  requirements.txt
data/: reviews.csv  students.csv  students_reviews.csv
